# ChangeLog for www-apps/trac
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/trac/ChangeLog,v 1.84 2008/11/17 04:40:58 wrobel Exp $

  17 Nov 2008; Gunnar Wrobel <wrobel@gentoo.org> -trac-0.10.5.ebuild:
  Removed vulnerable www-apps/trac-0.10.5 (sec issue #246130).

  16 Nov 2008; Markus Meier <maekke@gentoo.org> trac-0.11.2.ebuild:
  amd64/x86 stable, bug #246130

  15 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org> trac-0.11.2.ebuild:
  ppc stable, bug #246130

*trac-0.11.2 (09 Nov 2008)

  09 Nov 2008; Gunnar Wrobel <wrobel@gentoo.org> -trac-0.11.ebuild,
  -trac-0.11.1.ebuild, -trac-0.11.1-r2.ebuild, +trac-0.11.2.ebuild:
  Removed the trac-0.11.* ebuilds, added trac-0.11.2 with respect to sec issue
  #246130.

*trac-0.11.1-r2 (15 Sep 2008)

  15 Sep 2008; wrobel@gentoo.org -trac-0.11.1-r1.ebuild,
  +trac-0.11.1-r2.ebuild:
  Complete fix for #234137.

*trac-0.11.1-r1 (10 Sep 2008)

  10 Sep 2008; wrobel@gentoo.org +files/tracd.initd.2,
  +trac-0.11.1-r1.ebuild:
  Added trac-0.11.1-r1 that should fix #236509.

  23 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

*trac-0.11.1 (08 Aug 2008)

  08 Aug 2008; wrobel@gentoo.org +trac-0.11.1.ebuild:
  Added trac-0.11.1 (#234216).

  05 Aug 2008; wrobel@gentoo.org -trac-0.10.4.ebuild:
  Removed vulnerable trac-0.10.4 (#233175).

  04 Aug 2008; Tobias Heinlein <keytoaster@gentoo.org> trac-0.10.5.ebuild:
  amd64 stable wrt security bug #233175

  03 Aug 2008; Markus Ullmann <jokey@gentoo.org> trac-0.10.5.ebuild:
  Stable on x86 wrt security bug #233175

  03 Aug 2008; Tobias Scherbaum <dertobi123@gentoo.org> trac-0.10.5.ebuild:
  Fix quoting

  03 Aug 2008; Tobias Scherbaum <dertobi123@gentoo.org> trac-0.10.5.ebuild:
  ppc stable, bug #233175

  25 Jul 2008; Friedrich Oslage <bluebird@gentoo.org> trac-0.11.ebuild:
  Add ~sparc keyword, bug #232008

*trac-0.10.5 (18 Jul 2008)
