@@ -1,8 +1,8 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/trac/trac-0.11.2.ebuild,v 1.3 2008/11/16 17:47:23 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/trac/trac-0.11.2.ebuild,v 1.4 2009/03/07 20:43:18 betelgeuse Exp $
 
-EAPI="prefix"
+EAPI="prefix 2"
 
 inherit distutils webapp
 
@@ -50,45 +50,15 @@ RDEPEND="
 	sqlite? (
 		>=dev-db/sqlite-3.3.4
 		|| (
-			>=dev-lang/python-2.5
+			>=dev-lang/python-2.5[sqlite]
 			>=dev-python/pysqlite-2.3.2
 		)
 	)
 	subversion? (
-		>=dev-util/subversion-1.4.2
+		>=dev-util/subversion-1.4.2[python]
 	)
 	!www-apps/trac-webadmin
 	"
-
-# The following function should be added to eutils.eclass (see bug #143572):
-
-# Generate an standard error message for missing USE flags
-# in existing packages, and die.
-#
-# Usage: built_with_use_die <category/package> <functionality> [<USE flag>]
-#    ex: built_with_use_die dev-util/subversion python
-#    or: built_with_use_die www-servers/apache LDAP ldap
-#
-# Typical usage:
-#	if ! built_with_use dev-util/subversion python ; then
-#        built_with_use_die dev-util/subversion python
-#   fi
-#
-# Note: when <USE flag> is not specified, <functionality> is used for the USE flag name.
-built_with_use_die() {
-	local package=$1
-	local func=$2
-	local use_flag=$3
-
-	[[ -z ${use_flag} ]] && use_flag=${func}
-
-	eerror "Your ${package} package has been built without"
-	eerror "${func} support, please enable the '${use_flag}' USE flag and"
-	eerror "re-emerge ${package}."
-	elog "You can enable this USE flag either globally in /etc/make.conf,"
-	elog "or just for specific packages in /etc/portage/package.use."
-	die "${package} missing ${func} support"
-}
 
 pkg_setup() {
 	webapp_pkg_setup
@@ -97,23 +67,6 @@ pkg_setup() {
 		eerror "You must select at least one database backend, by enabling"
 		eerror "at least one of the 'mysql', 'postgres' or 'sqlite' USE flags."
 		die "no database backend selected"
-	fi
-
-	# python has built-in sqlite support starting from 2.5
-	if use sqlite && \
-		has_version ">=dev-lang/python-2.5" && \
-		! has_version ">=dev-python/pysqlite-2.3" && \
-		! built_with_use dev-lang/python sqlite ; then
-		eerror "To use the sqlite database backend, you must either:"
-		eerror "- build dev-lang/python with sqlite support, using the 'sqlite'"
-		eerror "  USE flag, or"
-		eerror "- emerge dev-python/pysqlite"
-		die "missing python sqlite support"
-	fi
-
-	if use subversion && \
-		! built_with_use dev-util/subversion python ; then
-		built_with_use_die dev-util/subversion python
 	fi
 
 	enewgroup tracd
